Create challenge 'drum-kit' thanks to new.py scripts

--- a/src/index.pug
+++ b/src/index.pug
@@ -9,3 +9,5 @@ a(href='/challenge/a') a
 a(href='/challenge/aa') aa
 a(href='/challenge/ab') ab
 a(href='/challenge/abc') abc
+a(href='/challenge/drum-kit') drum-kit
+a(href='/challenge/drum-kit') drum-kit
