Installation of Gulp to launch a server, to watch and convert pug/sass into html/css - Modification of script to generate a challenge

--- a/src/challenge/drum-kit/drum-kit.pug
+++ b/src/challenge/drum-kit/drum-kit.pug
@@ -46,4 +46,4 @@ html(lang='en')
 		audio(data-key='76', src='https://s3-us-west-2.amazonaws.com/aws-s3-bucket-dev-antoine/sounds/tink.wav')
 
 		script(type='text/javascript')
-			include 'script.js'
+			include script.js
