--- a/src/index.pug
+++ b/src/index.pug
@@ -1,13 +1,10 @@
-a(href='/challenge/test') test
-a(href='/challenge/testdd') testdd
-a(href='/challenge/testddddqsdqsd') testddddqsdqsd
-a(href='/challenge/hello') hello
-a(href='/challenge/hello') hello
-a(href='/challenge/hellod') hellod
-a(href='/challenge/hellodd') hellodd
-a(href='/challenge/a') a
-a(href='/challenge/aa') aa
-a(href='/challenge/ab') ab
-a(href='/challenge/abc') abc
-a(href='/challenge/drum-kit') drum-kit
-a(href='/challenge/drum-kit') drum-kit
+doctype html
+html(lang='en')
+	head
+		link(rel='stylesheet', href='style.css')
+		meta(charset='utf-8')
+		title drum-kit
+	body 
+		h1 Javascript 30 - Challenge
+		
+		a(href='/drum-kit/drum-kit') drum-kit
