--- a/src/challenge/clock/clock.pug
+++ b/src/challenge/clock/clock.pug
@@ -11,6 +11,8 @@ html(lang='en')
 				.hand.hour-hand
 				.hand.min-hand
 				.hand.second-hand
-      	
+		.digital-clock
+			.time
+			.ampm
 		script(type='text/javascript')
 			include script.js
