--- a/src/challenge/clock/style.scss
+++ b/src/challenge/clock/style.scss
@@ -1,7 +1,7 @@
 html {
     background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
     background-size: cover;
-    font-family: 'helvetica neue';
+    font-family: 'helvetica neue', Arial, sans-serif;
     text-align: center;
     font-size: 10px;
 }
@@ -18,9 +18,9 @@ body {
 .clock {
     width: 30rem;
     height: 30rem;
-    border: 20px solid white;
+    border: 10px solid white;
     border-radius: 50%;
-    margin: 50px auto;
+    margin: auto;
     position: relative;
     padding: 2rem;
     box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #EFEFEF, inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
@@ -35,9 +35,47 @@ body {
 }
 
 .hand {
-    width: 50%;
-    height: 6px;
     background: black;
     position: absolute;
     top: 50%;
+    transform-origin: 100%;
+    transform: rotate(90deg);
+    transition: all 0.05s;
+    transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+    &.hour-hand {
+        // width + left = 50%
+        width: 35%;
+        height: 8px;
+        background: black;
+        left: 15%;
+    }
+    &.min-hand {
+        width: 50%;
+        height: 6px;
+        background: black;
+    }
+    &.second-hand {
+        width: 50%;
+        height: 2px;
+        background: #96122F;
+    }
+}
+
+.digital-clock {
+    font-family: 'helvetica neue', Arial, sans-serif;
+    color: #ffffff;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50px;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    color: black;
+    .time,
+    .ampm {
+        letter-spacing: 0.05em;
+        font-size: 5rem;
+        padding: 5px 0;
+        display: inline-block;
+    }
 }
