Initiate CSS Variables challenge

--- a/src/challenge/clock/clock.pug
+++ b/src/challenge/clock/clock.pug
@@ -6,13 +6,14 @@ html(lang='en')
 		meta(charset='utf-8')
 		title clock
 	body 
+		//- Digital Clock
+		.digital-clock
+			.time
+			.ampm
 		.clock
 			.clock-face
 				.hand.hour-hand
 				.hand.min-hand
 				.hand.second-hand
-		.digital-clock
-			.time
-			.ampm
 		script(type='text/javascript')
 			include script.js
