--- a/src/index.pug
+++ b/src/index.pug
@@ -10,3 +10,5 @@ html(lang='en')
 		a(href='/drum-kit/drum-kit') drum-kit
 		br
 		a(href='/clock/clock') clock
+		br
+		a(href='/css-variables/css-variables') css-variables
