--- a/src/challenge/css-variables/css-variables.pug
+++ b/src/challenge/css-variables/css-variables.pug
@@ -6,7 +6,7 @@ html(lang='en')
 		meta(charset='utf-8')
 		title css-variables
 	body 
-		h2 Update CSS Variables with #[span.hl] JS
+		h2 Update CSS Variables with #[span.hl JS]
 
 		.controls
 			label(for="spacing") Spacing:
@@ -17,7 +17,7 @@ html(lang='en')
 
 			label(for="base") Base Color
 			input(id="base", type="color", name="base", value="#ffc600")
-			
+
 		img(src="https://source.unsplash.com/7bwQXzbF6KE/800x500")
 		
 		script(type='text/javascript')
