--- a/src/challenge/css-variables/style.scss
+++ b/src/challenge/css-variables/style.scss
@@ -1,3 +1,24 @@
+/** CSS Variables **/
+
+:root {
+    --base: #ffc600;
+    --spacing: 10px;
+    --blur: 10px;
+}
+
+img {
+    padding: var(--spacing);
+    background: var(--base);
+    filter: blur(var(--blur));
+}
+
+.hl {
+    color: var(--base);
+}
+
+
+/* Miscellanous CSS */
+
 body {
     text-align: center;
     background: #193549;
