Initiate array-code challenge, rename all the challenge.pug into index.pug, now simpler route - Update python script to generate a challenge

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,14 +1,16 @@
 doctype html
 html(lang='en')
 	head
-		link(rel='stylesheet', href='style.css')
+		link(rel='stylesheet', href='style.min.css')
 		meta(charset='utf-8')
 		title drum-kit
 	body 
 		h1 Javascript 30 - Challenge
 		
-		a(href='/drum-kit/drum-kit') drum-kit
+		a(href='/drum-kit/') drum-kit
 		br
-		a(href='/clock/clock') clock
+		a(href='/clock/') clock
 		br
-		a(href='/css-variables/css-variables') css-variables
+		a(href='/css-variables/') css-variables
+		br
+		a(href='/array-cardio/') array-cardio
