Add prism.js to add style to pre code tags - Download prism.js - New gulp task for script.js

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,3 +14,5 @@ html(lang='en')
 		a(href='/css-variables/') css-variables
 		br
 		a(href='/array-cardio/') array-cardio
+
+		script(type='text/javascript', src='script.min.js')
