New style for the front-page

--- a/src/index.pug
+++ b/src/index.pug
@@ -7,12 +7,8 @@ html(lang='en')
 	body 
 		h1 Javascript 30 - Challenge
 		
-		a(href='/drum-kit/') drum-kit
-		br
-		a(href='/clock/') clock
-		br
-		a(href='/css-variables/') css-variables
-		br
-		a(href='/array-cardio/') array-cardio
-
-		script(type='text/javascript', src='script.min.js')
+		ol
+			li #[a(href='/drum-kit/') drum-kit]
+			li #[a(href='/clock/') clock]
+			li #[a(href='/css-variables/') css-variables]
+			li #[a(href='/array-cardio/') array-cardio]
