--- a/src/style.scss
+++ b/src/style.scss
@@ -1,1 +1,26 @@
 @import 'node_modules/prismjs/themes/prism-okaidia';
+html {
+    body {
+        background: url('https://javascript30.com/images/topographic-pattern.png');
+        background-size: 240px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    h1 {
+        text-align: center;
+        text-shadow: 2px 2px 0 #ffc600, -2px -2px 0 #ffc600, 2px 2px 3px rgba(0, 0, 0, 0.3), -2px -2px 3px rgba(0, 0, 0, 0.3);
+    }
+    ol {
+        color: black;
+        li {
+            text-transform: capitalize;
+            font-size: 1.4rem;
+            font-weight: bold;
+            margin: auto;
+            padding: 5px;
+            a {
+                text-decoration: none;
+                color: black;
+            }
+        }
+    }
+}
