Initiate Flex panels challenge

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,3 +12,4 @@ html(lang='en')
 			li #[a(href='/clock/') clock]
 			li #[a(href='/css-variables/') css-variables]
 			li #[a(href='/array-cardio/') array-cardio]
+			li #[a(href='/flex-panels/') flex-panels]
