--- a/src/challenge/flex-panels/style.scss
+++ b/src/challenge/flex-panels/style.scss
@@ -35,6 +35,10 @@ body {
     background-size: cover;
     background-position: center;
     flex: 1;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     &.panel1 {
         background-image: url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500);
     }
@@ -61,10 +65,30 @@ body {
     }
     &.open {
         font-size: 40px;
+        flex: 5;
     }
+    /* Flex Items */
     >* {
         margin: 0;
         width: 100%;
         transition: transform 0.5s;
+        flex: 1 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    >*:first-child {
+        transform: translateY(-100%);
+    }
+    >*:last-child {
+        transform: translateY(100%);
+    }
+    &.open-active>* {
+        &:first-child {
+            transform: translateY(0);
+        }
+        &:last-child {
+            transform: translateY(0);
+        }
     }
 }
