--- a/src/index.pug
+++ b/src/index.pug
@@ -13,3 +13,4 @@ html(lang='en')
 			li #[a(href='/css-variables/') css-variables]
 			li #[a(href='/array-cardio/') array-cardio]
 			li #[a(href='/flex-panels/') flex-panels]
+			li #[a(href='/ajax-type/') ajax-type]
