Initial array cardio 2 challenge

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,3 +14,4 @@ html(lang='en')
 			li #[a(href='/array-cardio/') array-cardio]
 			li #[a(href='/flex-panels/') flex-panels]
 			li #[a(href='/ajax-type/') ajax-type]
+			li #[a(href='/array-cardio-two/') array-cardio-two]
