--- a/src/challenge/array-cardio-two/index.pug
+++ b/src/challenge/array-cardio-two/index.pug
@@ -2,11 +2,66 @@ doctype html
 
 html(lang='en') 
 	head 
+		link(rel='stylesheet', href='../../style.min.css')
 		link(rel='stylesheet', href='style.min.css')
 		meta(charset='utf-8')
 		title array-cardio-two
 	body 
+
+		h2 People Array
+		pre 
+			code.language-javascript
+				| const people = [{ name: 'Wes', year: 1988 }, { name: 'Kait', year: 1986 }, { name: 'Irv', year: 1970 },{ name: 'Lux', year: 2015 }];
 		
+		h2 Comments Array
+		pre 
+			code.language-javascript
+				| const comments = [ { text: 'Love this!', id: 523423 }, { text: 'Super good', id: 823423 }, { text: 'You are the best', id: 2039842 }, { text: 'Ramen is my fav food ever', id: 123523 }, { text: 'Nice Nice Nice!', id: 542328 }];
 		
+
+		h2 1. some() method
+		pre
+			code.language-javascript
+				| // is at least one person 19 or older?
+				| const isAdult = people.some(person => 
+				| 	((new Date()).getFullYear()) - person.year >= 19);
+
+		hr
+
+		h2 2. every() method
+		pre
+			code.language-javascript
+				| // is everyone 19 or older?
+				| const isAdult = people.every(person => 
+				| 	((new Date()).getFullYear()) - person.year >= 19);
+
+		hr
+
+		h2 3. find() method
+		pre
+			code.language-javascript
+				| // find the comment with the ID of 823423
+				| const comment = comments.find(comment => comment.id === 823423);
+
+		hr
+
+		h2 4. findIndex() method
+		pre
+			code.language-javascript
+				| // Find the comment with this ID
+				| const index = comments.findIndex(comment => comment.id === 823423);
+
+		hr
+
+		h2 5. slice() method & spread [...array] operator
+		pre
+			code.language-javascript
+				| // delete the comment with the ID of 823423
+				| const newComments = [
+				| 	...comments.slice(0, index),
+				| 	...comments.slice(index + 1)
+				| ];
+
+		script(type='text/javascript', src='../../script.min.js')
 		script(type='text/javascript')
 			include script.js
