Initial HTML5 Canvas challenge - Update README.md

--- a/src/index.pug
+++ b/src/index.pug
@@ -15,3 +15,4 @@ html(lang='en')
 			li #[a(href='/flex-panels/') flex-panels]
 			li #[a(href='/ajax-type/') ajax-type]
 			li #[a(href='/array-cardio-two/') array-cardio-two]
+			li #[a(href='/html-canvas/') html-canvas]
