HTML5 canvas challenge done

--- a/src/challenge/html-canvas/index.pug
+++ b/src/challenge/html-canvas/index.pug
@@ -6,7 +6,7 @@ html(lang='en')
 		meta(charset='utf-8')
 		title html-canvas
 	body 
-		canvas#id="draw"(width="800", height="800")
+		canvas#draw(width="800", height="800")
 		
 		script(type='text/javascript')
 			include script.js
