--- a/src/index.pug
+++ b/src/index.pug
@@ -16,3 +16,4 @@ html(lang='en')
 			li #[a(href='/ajax-type/') ajax-type]
 			li #[a(href='/array-cardio-two/') array-cardio-two]
 			li #[a(href='/html-canvas/') html-canvas]
+			li #[a(href='/dev-tools-tricks/') dev-tools-tricks]
